--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     body{ margin:0; font: 400 16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Helvetica Neue,Arial; color:var(--fg); background:var(--bg); transition: background-color .3s, color .3s; }
     main { display:flex; flex-direction:column; justify-content:center; text-align:center; padding: 16px; gap: 16px; min-height:100%; }
     #status-bar { padding: 6px; font-size: 14px; font-weight: 700; color: #fff; text-shadow: 0 1px 2px rgba(0,0,0,.2); transition: background-color .3s; position:fixed; top:0; left:0; right:0; z-index:100; }
-    .status-ok { background-color: var(--ok); }
-    .status-warn { background-color: var(--warn); }
-    .status-err { background-color: var(--err); }
+    .status-ok { background-color: var(--ok); } .status-warn { background-color: var(--warn); } .status-err { background-color: var(--err); }
     .card { background: var(--card); border-radius: var(--radius); padding: 16px; text-align: center; margin-top: 50px; }
     .primary-info h1 { margin: 0; font-size: clamp(2.2rem, 10vw, 4rem); line-height: 1.1; font-weight: 800; color: var(--primary); }
     .primary-info .sub-heading { font-size: clamp(1.4rem, 5vw, 2.2rem); line-height: 1.2; font-weight: 700; color: var(--fg); margin-top: 0.5rem; }
@@ -26,9 +24,7 @@
     .poi-card h2 { margin:0 0 12px 0; font-size:1.2rem; }
     .poi-list { display: grid; gap: 10px; text-align: left; }
     .poi-item { border-left: 3px solid var(--primary); padding-left: 10px; }
-    .poi-item .name { font-weight: 700; }
-    .poi-item .meta { font-size: 0.9rem; color: var(--muted); }
-    .poi-item .meta.err { color: var(--err); }
+    .poi-item .name { font-weight: 700; } .poi-item .meta { font-size: 0.9rem; color: var(--muted); } .poi-item .meta.err { color: var(--err); }
     .secondary-info { margin-bottom: 20px; }
     .secondary-info .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 12px; text-align: left; }
     .secondary-info .data-point .label { font-size: 0.8rem; color: var(--muted); font-weight: 600; }
@@ -38,8 +34,15 @@
     .actions .label { font-size: 0.8rem; color: var(--muted); font-weight: 600; margin-bottom: 4px; text-align: left; }
     button, .btn { display:block; text-decoration: none; appearance:none; cursor:pointer; font-weight:600; font-family:inherit; font-size:inherit; background: linear-gradient(180deg, color-mix(in oklab, var(--primary), #fff 10%), var(--primary)); color:#fff; border:0; border-radius:12px; padding:12px 18px; box-shadow:var(--shadow); }
     .btn-dial { background: var(--muted); font-size: 0.9rem; padding: 10px; }
-    .btn-cpr { background: var(--warn); }
+    .btn-cpr { background: var(--warn); } .btn-sms { background-color: #3b82f6; } .btn-alt { background: #475569; font-size: 0.9rem; padding: 10px; }
     button:active, .btn:active { transform: translateY(1px) scale(.99); }
+    [hidden] { display: none !important; }
+    .modal-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 200; display: flex; align-items: center; justify-content: center; padding: 16px; }
+    .modal-content { background: var(--card); padding: 24px; border-radius: var(--radius); max-width: 400px; width: 100%; text-align: left; }
+    .modal-content h2 { margin: 0 0 16px 0; }
+    .modal-content .form-group { display: grid; gap: 8px; }
+    .modal-content input { width: 100%; padding: 10px; border-radius: 8px; border: 1px solid var(--muted); background: var(--bg); color: var(--fg); font-size: 1rem; }
+    .modal-content .modal-actions { display: flex; gap: 10px; margin-top: 16px; justify-content: flex-end; }
   </style>
 </head>
 <body>
@@ -69,47 +72,53 @@
             <a href="tel:193" class="btn btn-dial">193 (Bombeiros)</a>
           </div>
         </div>
+        <button id="smsAlertBtn" class="btn-sms" hidden>Enviar Alerta SMS</button>
         <button id="shareAll">Compartilhar Localização</button>
         <button id="cprBeepBtn" class="btn-cpr">Iniciar Beep para RCP</button>
+        <button id="configBtn" class="btn-alt">Configurar Contato SMS</button>
       </div>
     </div>
   </main>
 
+  <div id="contactModal" class="modal-overlay" hidden>
+    <div class="modal-content">
+      <h2>Contato de Emergência para SMS</h2>
+      <div class="form-group">
+        <label for="contactNumber">Número de Telefone (com DDD)</label>
+        <input type="tel" id="contactNumber" placeholder="11987654321">
+        <small class="meta">Este número fica salvo apenas no seu aparelho.</small>
+      </div>
+      <div class="modal-actions">
+        <button id="cancelContact" class="btn-alt">Cancelar</button>
+        <button id="saveContact">Salvar</button>
+      </div>
+    </div>
+  </div>
+
 <script type="module">
   // ===== UTILS & LIBS =====
   const $ = (s) => document.querySelector(s);
-  // Biblioteca Open Location Code (Google) - Injetada para performance e confiabilidade
   const OLC={encode:function(e,t,o){o=o||10;if(typeof e!=='number'||typeof t!=='number')throw new Error("Invalid lat/lng");e=Math.min(90,Math.max(-90,e));t=Math.min(180,Math.max(-180,t));let r=Math.floor((e+90)*1e7),n=Math.floor((t+180)*1e7),c='';for(let i=0;i<5;i++){c='23456789CFGHJMPQRVWX'[n%20]+'23456789CFGHJMPQRVWX'[r%20]+c;r=Math.floor(r/20);n=Math.floor(n/20)}return c.substring(0,8)+'+'+c.substring(8,10)+(o>10?c.substring(10,o-1):'')}};
   const bearing=(t,o,a,c)=>{const n=t=>t*Math.PI/180,r=t=>t*180/Math.PI;let s=Math.sin(n(c-o))*Math.cos(n(a)),l=Math.cos(n(t))*Math.sin(n(a))-Math.sin(n(t))*Math.cos(n(a))*Math.cos(n(c-o));return(r(Math.atan2(s,l))+360)%360};
   const dirFromBearing=(b)=>['Norte','Nordeste','Leste','Sudeste','Sul','Sudoeste','Oeste','Noroeste'][Math.round(b/45)%8];
   const haversine=(t,o,a,c)=>{const n=6371e3,r=t=>t*Math.PI/180,s=r(a-t),l=r(c-o),d=Math.sin(s/2)**2+Math.cos(r(t))*Math.cos(r(a))*Math.sin(l/2)**2;return 2*n*Math.atan2(Math.sqrt(d),Math.sqrt(1-d))};
 
   // ===== STATE =====
-  let currentPosition = null;
-  let lastApiCallCoords = { lat: 0, lon: 0 };
-  let isOnline = true;
-  let hasRunFirstUpdate = false;
-  const UI_UPDATE_INTERVAL_MS = 2000;
-  const API_UPDATE_INTERVAL_MS = 10000;
+  let currentPosition = null, lastApiCallCoords = { lat: 0, lon: 0 }, isOnline = true, hasRunFirstUpdate = false;
+  const UI_UPDATE_INTERVAL_MS = 2000, API_UPDATE_INTERVAL_MS = 10000;
+  const EMERGENCY_CONTACT_KEY = 'emergency:contact';
 
   // ===== CORE LOGIC =====
   window.addEventListener('load', () => {
     applyTheme();
     setupOnlineDetection();
-    if (!('geolocation' in navigator)) {
-      updateStatusBar('Geolocalização não suportada', 'err');
-      return;
-    }
-    
+    loadEmergencyContact();
+    setupActionListeners();
+    if (!('geolocation' in navigator)) { updateStatusBar('Geolocalização não suportada', 'err'); return; }
     navigator.geolocation.watchPosition((pos) => {
       currentPosition = pos;
-      if (!hasRunFirstUpdate) {
-        updateUI(); // Otimização: Roda a UI imediatamente no primeiro sinal
-        updateEnrichedData();
-        hasRunFirstUpdate = true;
-      }
+      if (!hasRunFirstUpdate) { updateUI(); updateEnrichedData(); hasRunFirstUpdate = true; }
     }, handlePositionError, { enableHighAccuracy: true });
-    
     setInterval(updateUI, UI_UPDATE_INTERVAL_MS);
     setInterval(updateEnrichedData, API_UPDATE_INTERVAL_MS);
   });
@@ -203,25 +212,77 @@
     } catch(e) { console.warn('POI Error:', e); if (e.name === 'AbortError') { poisEl.innerHTML = '<div class="poi-item"><div class="meta err">A busca por referências demorou demais.</div></div>'; } else { poisEl.innerHTML = '<div class="poi-item"><div class="meta err">Não foi possível carregar os pontos de referência.</div></div>'; } }
   }
 
-  // ===== USER ACTIONS =====
-  $('#shareAll')?.addEventListener('click', async () => {
-    const payload = buildSharePayload();
-    if (navigator.share) { try { await navigator.share({ title: 'Minha Localização de Emergência', text: payload }); } catch (err) { console.warn('Web Share API failed:', err); } } 
-    else { navigator.clipboard.writeText(payload); if (confirm("Informações copiadas!\n\nDeseja tentar abrir o WhatsApp para colar e enviar?")) { window.open(`https://wa.me/?text=${encodeURIComponent(payload)}`, '_blank'); } }
-  });
+  // ===== USER ACTIONS & CONTACT MANAGEMENT =====
+  function setupActionListeners() {
+    $('#shareAll')?.addEventListener('click', handleShare);
+    $('#smsAlertBtn')?.addEventListener('click', handleSmsAlert);
+    $('#cprBeepBtn')?.addEventListener('click', handleCprBeep);
+    $('#configBtn')?.addEventListener('click', () => $('#contactModal').hidden = false);
+    $('#cancelContact')?.addEventListener('click', () => $('#contactModal').hidden = true);
+    $('#saveContact')?.addEventListener('click', handleSaveContact);
+  }
+
+  function loadEmergencyContact() {
+    const contact = localStorage.getItem(EMERGENCY_CONTACT_KEY);
+    const smsBtn = $('#smsAlertBtn');
+    if (contact) {
+      smsBtn.hidden = false;
+      $('#contactNumber').value = contact;
+    } else {
+      smsBtn.hidden = true;
+    }
+  }
+
+  function handleSaveContact() {
+    const numberInput = $('#contactNumber');
+    const number = numberInput.value.trim();
+    if (number && !isNaN(Number(number))) {
+      localStorage.setItem(EMERGENCY_CONTACT_KEY, number);
+      $('#contactModal').hidden = true;
+      loadEmergencyContact();
+    } else {
+      alert("Por favor, insira um número de telefone válido.");
+    }
+  }
+  
+  function buildAlertPayload() {
+    return `ALERTA DE EMERGÊNCIA:\nEstou em: ${$('#address').textContent} (${$('#city-info').textContent}).\n${$('#direction-speed').textContent}.\nCoordenadas: ${$('#coords').textContent}\nPlus Code: ${$('#pluscode').textContent}\nLink do Maps: https://maps.google.com/?q=${currentPosition.coords.latitude},${currentPosition.coords.longitude}`.trim();
+  }
+
+  async function handleShare() {
+    const payload = buildAlertPayload().replace('ALERTA DE EMERGÊNCIA:\n', '*Localização de Emergência*\n');
+    if (navigator.share) {
+      try { await navigator.share({ title: 'Minha Localização de Emergência', text: payload }); } catch (err) { console.warn('Web Share API failed:', err); }
+    } else {
+      navigator.clipboard.writeText(payload);
+      if (confirm("Informações copiadas!\n\nDeseja tentar abrir o WhatsApp para colar e enviar?")) {
+        window.open(`https://wa.me/?text=${encodeURIComponent(payload)}`, '_blank');
+      }
+    }
+  }
+
+  function handleSmsAlert() {
+    const contact = localStorage.getItem(EMERGENCY_CONTACT_KEY);
+    if (!contact || !currentPosition) {
+      alert("Nenhum contato de emergência configurado ou localização indisponível.");
+      return;
+    }
+    const payload = buildAlertPayload();
+    window.location.href = `sms:${contact}?body=${encodeURIComponent(payload)}`;
+  }
 
   let audioCtx, cprInterval = null;
-  $('#cprBeepBtn').addEventListener('click', () => {
+  async function handleCprBeep() {
     if (!audioCtx) { audioCtx = new (window.AudioContext || window.webkitAudioContext)(); }
-    if (cprInterval) { clearInterval(cprInterval); cprInterval = null; $('#cprBeepBtn').textContent = 'Iniciar Beep para RCP'; } 
-    else { const beep=()=>{const o=audioCtx.createOscillator(),t=audioCtx.createGain();o.connect(t),t.connect(audioCtx.destination),o.type="sine",o.frequency.value=880,t.gain.setValueAtTime(0,audioCtx.currentTime),t.gain.linearRampToValueAtTime(1,audioCtx.currentTime+.01),o.start(audioCtx.currentTime),t.gain.exponentialRampToValueAtTime(1e-5,audioCtx.currentTime+.1),o.stop(audioCtx.currentTime+.1)}; beep(); cprInterval = setInterval(beep, 60000 / 110); $('#cprBeepBtn').textContent = 'Parar Beep'; }
-  });
-
-  function buildSharePayload() {
-    let poiText = '';
-    const poiItems = document.querySelectorAll('.poi-item');
-    if (poiItems.length > 0 && !poiItems[0].textContent.includes('...')) { poiText = '\n*Referências Próximas:*\n' + [...poiItems].map(el => `- ${el.textContent.replace(/\s+/g, ' ').trim()}`).join('\n'); }
-    return `*Localização de Emergência*\nEstou em: ${$('#address').textContent}\n(${$('#city-info').textContent})\n${$('#direction-speed').textContent}${poiText}\n\nCoordenadas: ${$('#coords').textContent}\nPlus Code (Google): ${$('#pluscode').textContent}\n(Precisão de ${$('#accuracy').textContent})`.trim();
+    if (audioCtx.state === 'suspended') { await audioCtx.resume(); }
+    if (cprInterval) {
+      clearInterval(cprInterval); cprInterval = null;
+      $('#cprBeepBtn').textContent = 'Iniciar Beep para RCP';
+    } else {
+      const beep = () => {const o=audioCtx.createOscillator(),t=audioCtx.createGain();o.connect(t),t.connect(audioCtx.destination),o.type="sine",o.frequency.value=880,t.gain.setValueAtTime(0,audioCtx.currentTime),t.gain.linearRampToValueAtTime(1,audioCtx.currentTime+.01),o.start(audioCtx.currentTime),t.gain.exponentialRampToValueAtTime(1e-5,audioCtx.currentTime+.1),o.stop(audioCtx.currentTime+.1)};
+      beep(); cprInterval = setInterval(beep, 60000 / 110);
+      $('#cprBeepBtn').textContent = 'Parar Beep';
+    }
   }
 </script>
 </body>
